--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -8,12 +8,12 @@
   font-size: 36px;
 }
 
-.odd #third {
+.odd #third,
+#fourth {
   font-size: 24px;
 }
 
 #fourth {
   background-color: #90ee90;
-  font-size: 24px;
   font-weight: bold;
 }
