--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,31 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 10px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 5px;
+  margin: 0 0 10px 0;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 10px;
+  padding: 10px 5px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 5px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 8px 20px;
+  display: block;
+  margin: 0 auto;
 }
