--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,14 +2,34 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.flower-container {
+  display: flex;
+  gap: 52px;
+  justify-content: space-evenly;
+}
+
+.flower {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-basis: 200px;
+}
+
 img {
   width: 100px;
   height: 100px;
 }
 
+.text {
+  text-align: center;
+  text-wrap: wrap;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
