--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  row-gap: 8px;
+  column-gap: 8px;
 }
 
 .container div {
@@ -17,15 +21,31 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+}
+
+.logo {
+  justify-self: start;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
 }
 
+.menu ul {
+  display: grid;
+  grid-auto-flow: column;
+}
 .sidebar {
-  background-color: #C50208;
+  background-color: #c50208;
+  grid-row: 2 /4;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -34,18 +54,27 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  place-content: center;
 }
-
 
 .sidebar .side-content {
   background-color: white;
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  place-content: center;
 }
 
 .nav {
-  background-color: #C50208;
+  background-color: #c50208;
+}
+
+.nav ul {
+  list-style: none;
+  display: grid;
+  grid-auto-flow: column;
 }
 
 .nav ul li {
@@ -55,6 +84,10 @@
 
 .article {
   background-color: #bccbde;
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -65,15 +98,17 @@
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
@@ -83,6 +118,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .footer p {
